--- a/src/pug/policy.pug
+++ b/src/pug/policy.pug
@@ -1,5 +1,19 @@
 extends components/template.pug 
 
+block seo
+  meta(name="description", content="Ваша конфіденційність є важливою для агенції з розробки зовнішньої реклами “Реклама Поділля”. В зв’язку з цим спеціально для своїх користувачів нами була розроблена дана Політика конфіденційності персональних даних (далі – Політика конфіденційності).")
+	meta(name="keywords", content="Політика конфеденційності, збір даних на Реклама Поділля, Конфеденційність на Реклама Поділля")
+	meta(name="author", content="Реклама Поділля")
+	meta(name="publisher", content="Реклама Поділля")
+	meta(name="robots", content="index follow")
+  meta(property="og:title" content="Політика конфіденційності та збір даних на Реклама Поділля")
+  meta(property="og:description" content="Ваша конфіденційність є важливою для агенції з розробки зовнішньої реклами “Реклама Поділля”. В зв’язку з цим спеціально для своїх користувачів нами була розроблена дана Політика конфіденційності персональних даних (далі – Політика конфіденційності).")
+  meta(property="og:image" content="https://reklama-podillya.com.ua/img/logo.svg")
+  meta(property="og:url" content="https://reklama-podillya.com.ua/policy.html")
+  meta(property="og:type" content="website")
+	title Політика конфіденційності та збір даних на Реклама Поділля
+	link(rel="canonical", href="https://reklama-podillya.com.ua/policy.html")
+
 block content 
   .wrapper.additional-page 
     section.policy-page 
