--- a/src/pug/enterance_group.pug
+++ b/src/pug/enterance_group.pug
@@ -1,5 +1,46 @@
 extends components/template.pug 
 
+block seo 
+  meta(name="description", content="Вхідна група — це комплекс з елементів зовнішньої реклами (світових вивісок, об’ємних та світлових літер, лайтбоксі, чи звичайних вивісок), вітрин поклеєні плівкою, підсвітки, та обшивка фасаду алюмінієвими панелями та іншими якісними матеріалами.")
+  meta(name="keywords", content="замовити зовнішню рекламу комплексно, усі зовнішньої реклами, замовити плівку на вітрини, обшивка васадів, світлові підсвітки")
+  meta(name="author", content="Реклама Поділля")
+  meta(name="publisher", content="Реклама Поділля")
+  meta(name="robots", content="index follow")
+  meta(property="og:title" content="Вхідна група. Комплекс елементів зовнішньої реклами.")
+  meta(property="og:description" content="Вхідна група — це комплекс з елементів зовнішньої реклами (світових вивісок, об’ємних та світлових літер, лайтбоксі, чи звичайних вивісок), вітрин поклеєні плівкою, підсвітки, та обшивка фасаду алюмінієвими панелями та іншими якісними матеріалами.")
+  meta(property="og:image" content="https://reklama-podillya.com.ua/img/logo.svg")
+  meta(property="og:url" content="https://reklama-podillya.com.ua/enterance_group.html")
+  meta(property="og:type" content="website")
+  title Вхідна група. Комплекс елементів зовнішньої реклами.
+  link(rel="canonical", href="https://reklama-podillya.com.ua/enterance_group.html")
+  script(type="application/ld+json")
+    [
+    {
+      "@context": "http://schema.org/",
+      "@type": "LocalBusiness",
+      "name": "РЕКЛАМА ПОДІЛЛЯ",
+      "telephone": "067 904 77 38"
+    },
+    {
+      "@context": "http://schema.org/",
+      "@type": "LocalBusiness",
+      "name": "реклама Поділля",
+      "image": [
+        "https://reklama-podillya.com.ua/img/ll_bidonchik.jpg",
+        "https://reklama-podillya.com.ua/img/ll_sviatoslav.jpg",
+        "https://reklama-podillya.com.ua/img/ll_dnipro.jpg",
+        "https://reklama-podillya.com.ua/img/vf_veloman.jpg",
+        "https://reklama-podillya.com.ua/img/vf_center.jpg",
+        "https://reklama-podillya.com.ua/img/vf_right.jpg"
+      ],
+      "telephone": "067 904 77 38",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "м. Хмельницький, вул. Кам'янецька 122 БЦ “ОРІТ”, офіс 316"
+      }
+    }
+  ]
+
 block content 
   .wrapper.panel_sign-page.additional-page
     section 
