--- a/src/pug/facades.pug
+++ b/src/pug/facades.pug
@@ -41,10 +41,10 @@ block seo
     }
   ]
 
-block content 
+block.itemscope.itemtype="https://schema.org/Organization" content 
   .wrapper.panel_sign-page.additional-page
     section 
-      img(src="img/banner_facade.jpg", alt="" data-name="")
+      img(src="img/banner_facade.jpg", alt="" data-name="").itemprop="image"
       //- img(src="img/banner_neon_sign.jpg", alt="Щитова вивіска Chameleon" data-name="neon_sign")
       //- .page-switches.flex-sb 
       //-   a.choosen-switch(href="#" data-name="sign") вивіски
@@ -53,14 +53,14 @@ block content
         h1.sec-title ВЕНТИЛЬОВАНІ ФАСАДИ. ОБШИВКА АЛЮМІНІЄВИМИ КАСЕТАМИ
         p.sec-desc Всі елементи кріплення вентильованої фасадної системи (фасади обшиті алюмінієвими касетами) є універсальними. Це дозволяє створити різні архітектурні та конструкторські форми від класичних до ультрасучасних. Покращує термо та звукоізоляцію будівлі.
         h2.sec-subtitle Вентильовані фасади як утеплювач стін будівель
-        .sec-desc 
+        .sec-desc.itemprop="description"
           p Для додаткового утеплення стін будівлі кріпиться мінералізований утеплювач. На цокольній частині будівлі використовується екструзійний (пінополістирольний) утеплювач. Він не пропускає і не вбирає вологу. При цьому величина зазору вентильованого фасаду між утеплювачем і фасадом будівлі повинна відповідати стандартам що до монтажу даних систем. Це дозволяє висхідним потокам повітря циркулювати між облицювальним матеріалом (алюмінієві композитні панелі) і утеплювачем. Висушуює шар утеплювача в разі потрапляння на нього вологи.
           p З метою запобігання видування волокон з утеплювача, в разі застосування утеплювача з “некешированной” поверхнею, він накривається волого-вітрозахисною, паропроникною мембраною (плівкою). Це не є необхідною вимогою до влаштування систем вентильованих фасадів.
           p Вентильовані фасади сприяють збереженню тепла в приміщенні, перешкоджає появі вогкості та істотно зменшує кількість будівельного матеріалу, необхідного для зведення стін будівель. Це веде до економії коштів при будівництві, полегшення всієї споруди та можливості збільшення поверховості будівлі.
           p Повітряний проріз між стіною і декоративною панеллю значно зменшує тепловіддачу будівлі.
           p Однак, в разі ремонту або реконструкції вже що існує будівлі. Наприклад, багатоповерхового житлового будинку, система навісного вентильованого фасаду створить додаткове навантаження на опорні конструкції будівлі і його фундаменти. Тому, перед прийняттям рішення про встановлення вентильованого фасаду рекомендується провести обстеження технічного стану будівельних конструкцій будівлі та, при необхідності, виконати їх посилення.
         h2.sec-subtitle Вентильовані фасади основні переваги:
-        ul.components
+        ul.components.itemprop="description"
           li Можливість використання різних облицювальних матеріалів (цегла, натуральний камінь, дерев’яну фасадну дошку (планки), алюмінієвими композитні панелі, керамограніт, рейковий профіль, алюмінієвий лист, азбестоцементні та пропонуємо П листи, HPL панелі).
           li Широка можливість колірних комбінацій (карта кольорів) вентильованого фасаду – фірмові карти кольорів виробників, RAL
           li Високі тепло- і звукоізоляційні характеристики системи.
@@ -72,7 +72,7 @@ block content
           li Застосування навісного фасаду знімає проблему перегріву стін в літні місяці.
           li Ремонтопридатність в разі часткового пошкодження.
         h2.sec-subtitle Вентильовані Фасади Мають Такі Основні Недоліки:
-        ul.components
+        ul.components.itemprop="description"
           li Недотримання передбачених альбомами технічних рішень конструктивних методів щодо забезпечення пожежної безпеки навісних фасадів, а також застосування матеріалів, що не пройшли натурних вогневих випробувань, призводить до зниження вогнестійкості будівель.
           li Необхідна висока кваліфікація монтажників вентильованого фасаду.
           li Невідповідність стін-підстав необхідному рівню часто може приводити до застосування нестандартних елементів при монтажі вентильованого фасаду, а також обумовлює необхідність проведення топографічних робіт по фасаду з великою точністю.
@@ -81,7 +81,7 @@ block content
           li Недотримання умов або відмова від захисних плівок в конструкції теплоізоляційного шару, позначається на екологічності системи.
           li Застосування вентильованого фасаду на існуючих будівлях може порушувати початковий архітектурний задум і призводити до безликому, позбавленому індивідуальності зовнішнього вигляду будівлі.
         h2.sec-title ЦІНА
-        .sec-desc
+        .sec-desc.itemprop="description"
           p Вартість вентильованого фасаду від 1150 грн за м² і залежить від багатьох чинників: від якості використаних матеріалів, складності робіт, компонування. За більш детальною інформацією звертайтесь телефоном чи на сайті.
           p Консультації, заміри, розрахунки безкоштовні.
           p Працюємо з юридичними та фізичними особами. Надаємо всі фінансові та супровідні документ
@@ -118,14 +118,14 @@ block content
       //-   p.sec-desc Характерною рисою є скляна трубка, наповнена газом - неоном.Виготовляють неонові вивіски по засобу нагріву трубки та закачування газу. Після застосування газу - подається висока напруга і трубка випромінює світло. Індивідуальний колірний діапазон досягається внаслідок використання різних і іноді декількох інертних газів.
       //-   h2.sec-subtitle гнучкий світловий неон
       //-   p.sec-desc Це гнучкий неоновий шнур з діодами, має всередині люмінофорне покриття, завдяки якому світло розсіюється рівномірно по всьому периметру
-      //-   .sec-desc 
+      //-   .sec-desc.itemprop="description"
       //-     h2.sec-subtitle вартість послуг
       //-     p Ціна на монтаж та виготовлення (як приклад вивіска світлова AJOUR - вивіска з скляних трубок наповнених інертним газом, п'ять літер розміром 25 см - 5000 грн ) залежить від розмірів вивіски, а також від способу їх підсвітки, розміщення, монтажу та кріплення. 
       //-     p Для більш детальною інформацією зверніться до наших менеджерів.Консультації, заміри, розрахунки безкоштовні.Працюємо з юридичними та фізичними особами. Надаємо всі фінансові та супровідні документи.
       //-   .examples 
       //-     h2.sec-subtitle приклади виконаних робіт
       //-     .fig-slider 
-      //-       .examples-line
+      //-       .examples-line.itemprop="image"
       //-         .arr-left 
       //-         .arr-right 
       //-         - 
