--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -199,10 +199,16 @@ section
     margin: 30px 0
 
 .order-adv 
+  h2 
+    margin-bottom: 40px
   & > p 
     margin-bottom: 125px
     @media screen and ( max-width: 768px )
       margin-bottom: 100px
+  .g-button 
+    display: block
+    width: 30%
+    // margin: 0 auto
 
 .preferences
   align-items: stretch
@@ -624,10 +630,10 @@ section
     left: 50%
     transform: translate(-50%, -50%)
     width: 86vw
-    max-height: 90vh
+    max-height: 95vh
     background: #fff
     z-index: 12
-    padding: 50px
+    padding: 25px
     border-radius: 20px
     border: 2px solid $primaryBlue
     @media screen and ( max-width: 600px )
@@ -637,7 +643,7 @@ section
       display: none
     img 
       object-fit: contain
-      max-height: calc(90vh - 100px)
+      max-height: calc(95vh - 50px)
       @media screen and ( max-width: 600px )
         max-height: calc(90vh - 20px)
 
@@ -1154,3 +1160,18 @@ section.policy-page
     margin-bottom: 30px
   p
     margin-bottom: 10px
+
+.gallery 
+  flex-wrap: wrap 
+  gap: 20px
+  padding: 50px 0
+  figure 
+    width: 30%
+  img 
+    width: 100%
+    height: 400px
+    object-fit: cover
+    object-position: center
+  .active-figure 
+    img 
+      height: auto
