--- a/src/pug/volumetric_visors.pug
+++ b/src/pug/volumetric_visors.pug
@@ -2,7 +2,7 @@ extends components/template.pug
 
 block seo
   meta(name="description", content="Замовлення, виготовлення, монтаж об'ємних козирків для комерційних преміщень.")
-  meta(name="keywords", content="Замовити об'ємний козирок, Монтаж об'ємних козирків,")
+  meta(name="keywords", content="Замовити об'ємний козирок, Монтаж об'ємних козирків, об'ємні козирки купити")
   meta(name="author", content="Реклама Поділля")
   meta(name="publisher", content="Реклама Поділля")
   meta(name="robots", content="index follow")
@@ -12,7 +12,7 @@ block seo
   meta(property="og:url" content="https://reklama-podillya.com.ua/volumetric_visors.html")
   meta(property="og:type" content="website")
   title Реклама Поділля. Розробка Та Виготовлення Зовнішньої Реклами
-  link(rel="canonical", href="https://reklama-podillya.com.ua/")
+  link(rel="canonical", href="https://reklama-podillya.com.ua/volumetric_visors.html")
   script(type="application/ld+json")
     [
     {
@@ -44,7 +44,7 @@ block seo
 block.itemscope.itemtype="https://schema.org/Organization" content 
   .wrapper.panel_sign-page.additional-page
     section 
-      img(src="img/banner_parfum.jpg", alt="Обʼємний кощирок ПАРФУМ").itemprop="image"
+      img(src="img/banner_parfum.jpg", alt="Обʼємний козирок ПАРФУМ").itemprop="image"
       .page-content.choosen-page 
         h1.sec-title ОБ’ЄМНІ КОЗИРКИ РІЗНИХ КОНФІГУРАЦІЙ
         p.sec-desc На даний час об’ємні козирки є одним з основних елементів комплексу фасадних конструкцій при оформлені будь-якого комерційного приміщення. Також може використовуватись як окремий елемент вхідної групи.
