--- a/src/pug/enterance_group.pug
+++ b/src/pug/enterance_group.pug
@@ -44,7 +44,7 @@ block seo
 block.itemscope.itemtype="https://schema.org/Organization" content 
   .wrapper.panel_sign-page.additional-page
     section 
-      img(src="img/banner_enterance_group.jpg", alt="Вхідна група KAVAMAK").itemprop="image"
+      img(src="img/banner_enterance_group.jpg", alt="Вхідна група KAVAMAK" title="Усі види зовнішньої риклами для KAVAMAK").itemprop="image"
       .page-content.choosen-page.itemprop="description"
         h1.sec-title вхідна група
         h2.sec-subtitle ВХІДНА ГРУПА. КОМПЛЕКС ЕЛЕМЕНТІВ ЗОВНІШНЬОЇ РЕКЛАМИ.
