--- a/src/pug/showcase.pug
+++ b/src/pug/showcase.pug
@@ -41,10 +41,10 @@ block seo
     }
   ]
 
-block.itemscope.itemtype="https://schema.org/Organization" content 
+block content 
   .wrapper.panel_sign-page.additional-page
     section 
-      img(src="img/banner_showcase.jpg", alt="НАКЛЕЮВАННЯ ПЛІВКОЮ ORACAL").itemprop="image"
+      img(src="img/banner_showcase.jpg", alt="НАКЛЕЮВАННЯ ПЛІВКОЮ ORACAL")
       .page-content.choosen-page 
         h1.sec-title НАКЛЕЮВАННЯ ПЛІВКОЮ ORACAL
         h2.sec-subtitle вартість послуг
@@ -52,7 +52,7 @@ block.itemscope.itemtype="https://schema.org/Organization" content
         .examples 
           h2.sec-subtitle приклади виконаних робіт
           .fig-slider 
-            .examples-line.itemprop="image"
+            .examples-line
               .arr-left 
               .arr-right 
               - 
