--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1161,6 +1161,11 @@ section.policy-page
   p
     margin-bottom: 10px
 
+.gallery-page
+  padding-top: 50px
+  h1 
+    margin: 0
+
 .gallery 
   flex-wrap: wrap 
   gap: 20px
