--- a/src/pug/gallery.pug
+++ b/src/pug/gallery.pug
@@ -1,5 +1,7 @@
 extends components/template.pug 
 
 block content 
-  .wrapper.gallery.fig-list.flex-sb
-    include ../php/gallery.php
+  .wrapper.gallery-page
+    h1.sec-title.gallery-title Галерея робіт
+    .gallery.fig-list.flex-sb
+      include ../php/gallery.php
