--- a/src/pug/panel_sign.pug
+++ b/src/pug/panel_sign.pug
@@ -41,29 +41,29 @@ block seo
     }
   ]
 
-block.itemscope.itemtype="https://schema.org/Organization" content 
+block(itemscope itemtype="https://schema.org/Organization")
   .wrapper.panel_sign-page.additional-page
     section 
-      img(src="img/banner_panel_sign.jpg", alt="Щитова вивіска Chameleon" data-name="sign").itemprop="image"
-      img(src="img/banner_neon_sign.jpg", alt="Щитова вивіска Chameleon" data-name="neon_sign").itemprop="image"
-      .page-switches.flex-sb.itemprop="url"
+      img(src="img/banner_panel_sign.jpg", alt="Щитова вивіска Chameleon" data-name="sign" itemprop="image")
+      img(src="img/banner_neon_sign.jpg", alt="Щитова вивіска Chameleon" data-name="neon_sign" itemprop="image")
+      .page-switches.flex-sb(itemprop="url")
         a.choosen-switch(href="#" data-name="sign") вивіски
         a(href="#" data-name="neon_sign") неонові вивіски 
       .page-content.choosen-page(data-name='sign') 
         h1.sec-title щитова вивіска, рекламний щит за 260 грн
         p.sec-desc Щитова вивіска - оптимальний спосіб інформувати про себе. Така вивіска, рекламний щит є не дорога як у виробництві, так і в обслуговувані. Основними перевагами такого виду зовнішньої реклами є її невисока ціна виготовлення, простий монтаж, транспортування, невибагливе обслуговування. Щитову вивіску, рекламний щит, також можна доповнити зовнішнім підсвічуванням. Найбільше така вивіска застосовується для невеликих магазинів, кіосків, кав'ярень, також як вказівник чи рекламно-інформаційний щит.
         h2.sec-subtitle Ми пропонуємо декілька варіантів виготовлення щитової реклами з застосуванням різних матеріалів:
-        .sec-desc.itemprop="description"
+        .sec-desc(itemprop="description")
           p Вартість пласких, об’ємних, світлових букв залежить від ряду критеріїв: вигляду виробу, розмірів, місця застосування, складності роботи й т.д. У нас ви можете замовити будь-який вподобаний варіант всього за кілька натискань.
           p Ціна на монтаж та виготовлення залежить від розмірів вивіски, а також від способу їх підсвітки, розміщення, монтажу та кріплення. Для більш детальної інформації зверніться до наших менеджерів.Консультації, заміри, розрахунки безкоштовні.Працюємо з юридичними та фізичними особами. Надаємо всі фінансові та супровідні документи.
-          ul.components.itemprop="description"
+          ul.components(itemprop="description")
             li основа – оцинкована жесть поклеєна широкоформатним друком з ламінацією на плівці Оракал – 520 грн м².
             li основа – ластик ПВХ товщиною 3 мм, поклеєний широкоформатним друком з ламінацією на плівці Оракал –800 грн м².
             li основа – панель з алюмінієвого композиту товщиною 3 мм, поклеєний широкоформатним друком з ламінацією на плівці Оракал – 1100 грн м².
         .examples 
           h2.sec-subtitle приклади виконаних робіт
           .fig-slider 
-            .examples-line.itemprop="image"
+            .examples-line(itemprop="image")
               .arr-left 
               .arr-right 
               - 
@@ -109,14 +109,14 @@ block.itemscope.itemtype="https://schema.org/Organization" content
         p.sec-desc Характерною рисою є скляна трубка, наповнена газом - неоном.Виготовляють неонові вивіски по засобу нагріву трубки та закачування газу. Після застосування газу - подається висока напруга і трубка випромінює світло. Індивідуальний колірний діапазон досягається внаслідок використання різних і іноді декількох інертних газів.
         h2.sec-subtitle гнучкий світловий неон
         p.sec-desc Це гнучкий неоновий шнур з діодами, має всередині люмінофорне покриття, завдяки якому світло розсіюється рівномірно по всьому периметру
-        .sec-desc.itemprop="description"
+        .sec-desc(itemprop="description")
           h2.sec-subtitle вартість послуг
           p Ціна на монтаж та виготовлення (як приклад вивіска світлова AJOUR - вивіска з скляних трубок наповнених інертним газом, п'ять літер розміром 25 см - 5000 грн ) залежить від розмірів вивіски, а також від способу їх підсвітки, розміщення, монтажу та кріплення. 
           p Для більш детальною інформацією зверніться до наших менеджерів.Консультації, заміри, розрахунки безкоштовні.Працюємо з юридичними та фізичними особами. Надаємо всі фінансові та супровідні документи.
         .examples 
           h2.sec-subtitle приклади виконаних робіт
           .fig-slider 
-            .examples-line.itemprop="image"
+            .examples-line(itemprop="image")
               .arr-left 
               .arr-right 
               - 
