--- a/src/pug/pillars.pug
+++ b/src/pug/pillars.pug
@@ -41,10 +41,10 @@ block seo
     }
   ]
 
-block.itemscope.itemtype="https://schema.org/Organization" content 
+block(itemscope itemtype="https://schema.org/Organization")
   .wrapper.panel_sign-page.additional-page
     section 
-      img(src="img/banner_pillars.jpg", alt="").itemprop="image"
+      img(src="img/banner_pillars.jpg", alt="" itemprop="image")
       .page-content.choosen-page.itemprop="description" 
         h1.sec-title ШТЕНДЕРИ, ІНФОРМАЦІЙНІ ЩИТИ, ВУЛИЧНІ ТАБЛИЧКИ, БАНЕРИ
         h2.sec-subtitle Штендери
@@ -58,7 +58,7 @@ block.itemscope.itemtype="https://schema.org/Organization" content
         .examples 
           h2.sec-subtitle приклади виконаних робіт
           .fig-slider 
-            .examples-line.itemprop="image"
+            .examples-line(itemprop="image")
               .arr-left 
               .arr-right 
               - 
