--- a/src/pug/facades.pug
+++ b/src/pug/facades.pug
@@ -41,9 +41,9 @@ block seo
     }
   ]
 
-block(itemscope itemtype="https://schema.org/Organization")
+block content
   .wrapper.panel_sign-page.additional-page
-    section 
+    section(itemscope itemtype="https://schema.org/Organization") 
       img(src="img/banner_facade.jpg", alt="" data-name="" itemprop="image")
       //- img(src="img/banner_neon_sign.jpg", alt="Щитова вивіска Chameleon" data-name="neon_sign")
       //- .page-switches.flex-sb 
