--- a/src/pug/pillars.pug
+++ b/src/pug/pillars.pug
@@ -41,9 +41,9 @@ block seo
     }
   ]
 
-block(itemscope itemtype="https://schema.org/Organization")
+block content
   .wrapper.panel_sign-page.additional-page
-    section 
+    section(itemscope itemtype="https://schema.org/Organization")
       img(src="img/banner_pillars.jpg", alt="" itemprop="image")
       .page-content.choosen-page.itemprop="description" 
         h1.sec-title ШТЕНДЕРИ, ІНФОРМАЦІЙНІ ЩИТИ, ВУЛИЧНІ ТАБЛИЧКИ, БАНЕРИ
