--- a/src/pug/light_letters.pug
+++ b/src/pug/light_letters.pug
@@ -41,9 +41,9 @@ block seo
     }
   ]
 
-block(itemscope itemtype="https://schema.org/Organization") 
+block content 
   .wrapper.panel_sign-page.additional-page
-    section 
+    section(itemscope itemtype="https://schema.org/Organization") 
       img(src="img/banner_bubbles.jpg", alt="Обʼємні світлові літери BUBBLES" itemprop="image")
       .page-content.choosen-page 
         h1.sec-title обʼємні світлові літери
