--- a/src/pug/panel_sign.pug
+++ b/src/pug/panel_sign.pug
@@ -41,9 +41,9 @@ block seo
     }
   ]
 
-block(itemscope itemtype="https://schema.org/Organization")
+block content
   .wrapper.panel_sign-page.additional-page
-    section 
+    section(itemscope itemtype="https://schema.org/Organization")
       img(src="img/banner_panel_sign.jpg", alt="Щитова вивіска Chameleon" data-name="sign" itemprop="image")
       img(src="img/banner_neon_sign.jpg", alt="Щитова вивіска Chameleon" data-name="neon_sign" itemprop="image")
       .page-switches.flex-sb(itemprop="url")
