--- a/src/pug/volumetric_visors.pug
+++ b/src/pug/volumetric_visors.pug
@@ -41,9 +41,9 @@ block seo
     }
   ]
 
-block(itemscope itemtype="https://schema.org/Organization")
+block content
   .wrapper.panel_sign-page.additional-page
-    section 
+    section(itemscope itemtype="https://schema.org/Organization")
       img(src="img/banner_parfum.jpg", alt="Обʼємний козирок ПАРФУМ" itemprop="image")
       .page-content.choosen-page 
         h1.sec-title ОБ’ЄМНІ КОЗИРКИ РІЗНИХ КОНФІГУРАЦІЙ
