Main page change our works. Some seo

--- a/src/pug/enterance_group.pug
+++ b/src/pug/enterance_group.pug
@@ -41,7 +41,7 @@ block seo
       }
     ]
 
-block(itemscope itemtype="https://schema.org/Organization") 
+block content
   .wrapper.panel_sign-page.additional-page
     section 
       img(src="img/banner_enterance_group.jpg", alt="Вхідна група KAVAMAK" title="Усі види зовнішньої риклами для KAVAMAK" itemprop="image" )
