--- a/src/pug/light_letters.pug
+++ b/src/pug/light_letters.pug
@@ -41,7 +41,7 @@ block seo
       }
     ]
 
-block(itemscope itemtype="https://schema.org/Organization") 
+block content
   .wrapper.panel_sign-page.additional-page
     section 
       img(src="img/banner_bubbles.jpg", alt="Обʼємні світлові літери BUBBLES" itemprop="image")
