--- a/src/pug/facades.pug
+++ b/src/pug/facades.pug
@@ -41,7 +41,7 @@ block seo
       }
     ]
 
-block(itemscope itemtype="https://schema.org/Organization")
+block content
   .wrapper.panel_sign-page.additional-page
     section 
       img(src="img/banner_facade.jpg", alt="" data-name="" itemprop="image")
