--- a/src/pug/panel_sign.pug
+++ b/src/pug/panel_sign.pug
@@ -41,7 +41,7 @@ block seo
       }
     ]
 
-block(itemscope itemtype="https://schema.org/Organization")
+block content
   .wrapper.panel_sign-page.additional-page
     section 
       img(src="img/banner_panel_sign.jpg", alt="Щитова вивіска Chameleon" data-name="sign" itemprop="image")
