--- a/src/pug/volumetrical_visors.pug
+++ b/src/pug/volumetrical_visors.pug
@@ -13,35 +13,35 @@ block seo
   meta(property="og:type" content="website")
   title Реклама Поділля. Розробка Та Виготовлення Зовнішньої Реклами
   link(rel="canonical", href="https://reklama-podillya.com.ua/volumetric_visors.html")
-  script(type="application/ld+json")
+  script(type="application/ld+json").
     [
-    {
-      "@context": "http://schema.org/",
-      "@type": "LocalBusiness",
-      "name": "РЕКЛАМА ПОДІЛЛЯ",
-      "telephone": "067 904 77 38"
-    },
-    {
-      "@context": "http://schema.org/",
-      "@type": "LocalBusiness",
-      "name": "реклама Поділля",
-      "image": [
-        "https://reklama-podillya.com.ua/img/ll_bidonchik.jpg",
-        "https://reklama-podillya.com.ua/img/ll_sviatoslav.jpg",
-        "https://reklama-podillya.com.ua/img/ll_dnipro.jpg",
-        "https://reklama-podillya.com.ua/img/vf_veloman.jpg",
-        "https://reklama-podillya.com.ua/img/vf_center.jpg",
-        "https://reklama-podillya.com.ua/img/vf_right.jpg"
-      ],
-      "telephone": "067 904 77 38",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "м. Хмельницький, вул. Кам'янецька 122 БЦ “ОРІТ”, офіс 316"
+      {
+        "@context": "http://schema.org/",
+        "@type": "LocalBusiness",
+        "name": "РЕКЛАМА ПОДІЛЛЯ",
+        "telephone": "067 904 77 38"
+      },
+      {
+        "@context": "http://schema.org/",
+        "@type": "LocalBusiness",
+        "name": "реклама Поділля",
+        "image": [
+          "https://reklama-podillya.com.ua/img/ll_bidonchik.jpg",
+          "https://reklama-podillya.com.ua/img/ll_sviatoslav.jpg",
+          "https://reklama-podillya.com.ua/img/ll_dnipro.jpg",
+          "https://reklama-podillya.com.ua/img/vf_veloman.jpg",
+          "https://reklama-podillya.com.ua/img/vf_center.jpg",
+          "https://reklama-podillya.com.ua/img/vf_right.jpg"
+        ],
+        "telephone": "067 904 77 38",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "м. Хмельницький, вул. Кам'янецька 122 БЦ “ОРІТ”, офіс 316"
+        }
       }
-    }
-  ]
+    ]
 
-block(itemscope itemtype="https://schema.org/Organization")
+block content
   .wrapper.panel_sign-page.additional-page
     section 
       img(src="img/banner_parfum.jpg", alt="Обʼємний козирок ПАРФУМ" itemprop="image")
